# edaijiamcp-project

./: .env.example  README.md  edaijiamcp.py  main.py  pyproject.toml
edjserver/: EdjApi.py  EdjSignUtils.py  EdjStatus.py  EdjSystemParams.py
edjserver/tokens/: 13264067051.token  13800138000.token
